# solana-hackathon

./: LICENSE  README.md
circular-economy/: .gitignore  build-rust-program.sh  install-rust-program.sh
circular-economy/ce/: package.json
circular-economy/ce/src/program-rust/: Cargo.toml
circular-economy/ce/src/program-rust/src/: lib.rs
react_app/src/Components/: dashboard.tsx
